[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pwasopt"
version = "0.1.4"
authors = [
  { name="Mengjia Zhu", email="mengjia.zhu@imtlucca.it" },
  { name="Alberto Bemporad", email="alberto.bemporad@imtlucca.it" },
]
description = "PWAS/PWASp - Global and Preference-based Optimization with Mixed Variables using (P)iece(w)ise (A)ffine (S)urrogates"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy>=1.24.3,<2.0.0","scipy>=1.11.1","pulp==2.8.0","pyDOE==0.3.8","scikit-learn==1.3.0",
    "pycddlib>=2.1.7,<3.0.0","pyparc>=2.0.4", "threadpoolctl==3.1.0", "cvxopt==1.2.6"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["Mixed-variable optimization","Mixed-integer optimization","global optimization", "preference-based optimization", "black-box optimization"]

[project.urls]
"Homepage" = "https://github.com/mjzhu-p/PWAS"
